[package]
name = "platform"
version = "0.0.1"
authors = ["Chris Williams <diosix@tuta.io>"]
license = "MIT"
edition = "2018"
publish = false

# external dependencies
[dependencies.spin]
version = "0.7.0"

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

# local dependencies
[dependencies.devicetree]
path = "../devicetree"

[dependencies.mmio_16550_uart]
path = "src/mmio_16550_uart"